Fix minor spacing issue; fix naming

--- a/frontend/src/styles/UserSignUp.css
+++ b/frontend/src/styles/UserSignUp.css
@@ -104,7 +104,7 @@ img {
 }
 
 #signup-title {
-    margin: 10px 0 0;
+    margin: 15px 0 0 0;
     font-size: 1.3rem;
     text-align: center;
 }
@@ -297,7 +297,9 @@ img {
 }
 
 #to-login-button {
+    font-weight: 100;
+    letter-spacing: 0.5px;
     position: absolute;
     left:0;
-    top: 40%;
+    top: 30%;
 }
